--- a/custom_components/restack/manifest.json
+++ b/custom_components/restack/manifest.json
@@ -7,6 +7,6 @@
     "documentation": "https://www.to.do",
     "integration_type": "service",
     "iot_class": "cloud_polling",
-    "requirements": [],
-    "version": "0.0.1"
+    "requirements": ["pyrestack"],
+    "version": "0.0.2"
 }
