--- a/custom_components/restack/manifest.json
+++ b/custom_components/restack/manifest.json
@@ -7,6 +7,6 @@
     "documentation": "https://www.to.do",
     "integration_type": "service",
     "iot_class": "cloud_polling",
-    "requirements": ["pyrestack"],
+    "requirements": ["pyrestack==0.0.25"],
     "version": "0.0.2"
 }
